data/diff_tests/wasmtime/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1978.wast
;; 9. **Test 9: Control Transfer via Conditional Branch to an Import within a Block**    - **Description**: Implement a conditional branch within a block that leads to transferring control to an imported function, assessing if every implementation respects operand stack requirements and label indexing correctly during such boundary crossings.

(assert_invalid
  (module
    (func (import "env" "externalFunc") (result i32))
    (func (block (br_if 0 (call 0))))
  )
  "type mismatch"
)
